--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3348,7 +3348,7 @@
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		-moz-justify-content: center;
+		-moz-justify-content: center;z
 		-webkit-justify-content: center;
 		-ms-justify-content: center;
 		justify-content: center;
