--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2928,6 +2928,9 @@
 	.grow-img-shadow:hover{
 		filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.12));
 	}
+	.img-shadow{
+		filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.12));
+	}
 	.roles{
 		margin-bottom: 2em;
 	}
