--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1641,12 +1641,13 @@
 
 	body {
 		background-color: #333333;
-		color: #8e8e8e;
+		color: #8F8F8F;
 	}
 
 	body, input, select, textarea {
 		font-family: "Roboto", Helvetica, sans-serif;
-		font-size: 16pt;
+		font-size: 17px;
+		letter-spacing: 0.1px;
 		font-weight: 300;
 		line-height: 1.65;
 	}
@@ -2207,7 +2208,7 @@
 
 	input[type="checkbox"] + label,
 	input[type="radio"] + label {
-		color: #8e8e8e;
+		color: #8F8F8F;
 	}
 
 		input[type="checkbox"] + label:before,
@@ -2910,6 +2911,7 @@
 	.img-link{
 		transition: transform ease 0.4s;
 		border-bottom: none;
+		cursor: pointer;
 	}
 	.img-link:hover{
 		transform: scale(1.03);
@@ -2918,7 +2920,7 @@
 		transition: transform ease 0.5s;
 	}
 	.grow-img-scale:hover{
-		transform: scale(1.3);
+		transform: scale(1.2);
 		z-index: 1;
 	}
 	.discoverability-images{
@@ -2956,7 +2958,7 @@
 		}
 	}
 	.project-inner{
-		width: 45em !important;
+		width: 50em !important;
 	}
 	._1em-bottom{
 		margin-bottom: 1em;
@@ -3419,7 +3421,6 @@
 /* Banner */
 
 	#banner {
-		background-color: #333333;
 		color: rgba(255, 255, 255, 0.75);
 		padding: 8em 0 6em 0 ;
 		-moz-align-items: center;
@@ -3435,12 +3436,12 @@
 		-ms-justify-content: center;
 		justify-content: center;
 		/* background-image: url("../../images/banner3.jpg"); */
-		background-color: black;
+		background-color: #292F36;
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
 		border-top: 0;
-		min-height: 100vh;
+		min-height: 50vh;
 		position: relative;
 		text-align: center;
 		overflow: hidden;
@@ -3606,7 +3607,7 @@
 			border: 0;
 			border-radius: 4px 4px 0 0;
 			bottom: -3em;
-			color: #8e8e8e;
+			color: #8F8F8F;
 			display: block;
 			height: 3em;
 			left: 50%;
@@ -3688,10 +3689,12 @@
 					display: none;
 				}
 
-				#banner .more {
+				/* #banner .more {
+					display: none;
+				} */
+				#page-wrapper .more{
 					display: none;
 				}
-
 		}
 
 		@media screen and (max-width: 480px) {
@@ -3723,6 +3726,10 @@
 		}
 
 		body.is-loading #banner .more {
+			bottom: -5em;
+		}
+
+		body.is-loading #page-wrapper .more {
 			bottom: -5em;
 		}
 
@@ -3775,6 +3782,49 @@
 			margin: 0 auto;
 			max-width: calc(100% - 4em);
 			width: 60em;
+		}
+
+		#wrapper > * > .inner-bigger {
+			margin: 0 auto;
+			max-width: calc(100% - 4em);
+			width: 78em;
+		}
+
+		#page-wrapper .more {
+			position: fixed;
+			bottom: 0px;
+			-moz-transition: height 0.2s ease;
+			-webkit-transition: height 0.2s ease;
+			-ms-transition: height 0.2s ease;
+			transition: height 0.2s ease;
+			-moz-animation: more 0.75s ease-out 3s forwards;
+			-webkit-animation: more 0.75s ease-out 3s forwards;
+			-ms-animation: more 0.75s ease-out 3s forwards;
+			animation: more 0.75s ease-out 3s forwards;
+			background-color: #ffffff;
+			background-image: url("images/chevron-up.svg");
+			background-position: 50% 0.875em;
+			background-repeat: no-repeat;
+			background-size: auto;
+			border: 0;
+			border-radius: 8px 8px 0 0;
+			bottom: -3em;
+			color: #8F8F8F;
+			display: block;
+			height: 3em;
+			left: 50%;
+			margin-left: -2.5em;
+			overflow: hidden;
+			/* position: absolute; */
+			text-indent: 5em;
+			white-space: nowrap;
+			width: 5em;
+			z-index: 2;
+			box-shadow: 0px -6px 26px rgba(0, 0, 0, 0.06);;
+		}
+
+		#page-wrapper .more:hover {
+			height: 3.5em;
 		}
 
 	@media screen and (max-width: 736px) {
